# weather_mcp

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  server_sse.py  server_stdio.py
tools/: weather_tool.py
utils/: utils.py
weather_mcp/: server_sse.py  server_stdio.py  weather.py
